@@ -5,7 +5,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import javassist.NotFoundException;
 import org.junit.Assert;
 import org.junit.Before;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
@@ -34,13 +33,11 @@ import uk.gov.hmcts.reform.prl.models.caseinvite.CaseInvite;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.WithdrawApplication;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
-import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.UploadedDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
 import uk.gov.hmcts.reform.prl.models.serviceofapplication.CitizenSos;
 import uk.gov.hmcts.reform.prl.models.serviceofapplication.StatementOfService;
-import uk.gov.hmcts.reform.prl.models.serviceofapplication.StmtOfServiceAddRecipient;
 import uk.gov.hmcts.reform.prl.models.user.UserInfo;
 import uk.gov.hmcts.reform.prl.repositories.CaseRepository;
 import uk.gov.hmcts.reform.prl.services.ApplicationsTabService;
@@ -68,7 +65,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TEST_UUID;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT_WITH_HWF;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_UPDATE;
@@ -76,7 +72,6 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.wrapElements;
 
 @RunWith(MockitoJUnitRunner.Silent.class)
-@Ignore
 public class CaseServiceTest {
 
     public static final String authToken = "Bearer TestAuthToken";
@@ -606,40 +601,73 @@ public class CaseServiceTest {
     @Test
     public void testUpdateCaseDetailsCitizenUpdateOnCaApplicant() throws JsonProcessingException {
 
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
         User user1 = User.builder().idamId("123").build();
-        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test").build();
-        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test").build();
+        PartyDetails respondent1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test").build();
+        PartyDetails respondent2 = PartyDetails.builder().email("test@hmcts.net").firstName("test").build();
         caseData = CaseData.builder()
-            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .applicants(Arrays.asList(element(respondent1), element(respondent2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
+            .statementOfService(StatementOfService.builder().build())
             .build();
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
         caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
 
         caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
             .id(123L)
             .state("SUBMITTED_PAID")
             .build();
-        PartyDetails partyDetails1 = PartyDetails.builder()
-            .firstName("Test")
-            .lastName("User")
-            .user(User.builder()
-                      .email("test@gmail.com")
-                      .idamId("123")
-                      .solicitorRepresented(YesOrNo.Yes)
-                      .build())
+
+        PartyDetails respondent = PartyDetails.builder()
+            .firstName("test1")
+            .lastName("test22")
+            .user(user1)
+            .canYouProvideEmailAddress(YesOrNo.No)
+            .isAddressConfidential(YesOrNo.No)
+            .isPhoneNumberConfidential(YesOrNo.No)
+            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+            .isAtAddressLessThan5YearsWithDontKnow(YesNoDontKnow.yes)
             .build();
+
+        when(confidentialDetailsMapper.mapConfidentialData(
+            Mockito.any(CaseData.class),
+            Mockito.anyBoolean()
+        )).thenReturn(caseDataMock);
+
         citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .partyDetails(partyDetails1)
+            .partyDetails(respondent)
             .partyType(PartyEnum.applicant)
             .build();
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
 
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
 
-        userDetails = UserDetails.builder().build();
-        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(authToken,"123")).thenReturn(caseDetails);
-        when(caseRepository.updateCase(authToken, "123", caseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
-
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123", "citizen-case-submit",
                                                                            citizenUpdatedCaseData
         );
@@ -650,13 +678,39 @@ public class CaseServiceTest {
     @Test
     public void testUpdateCaseDetailsCitizenUpdateOnCaRespondent() throws JsonProcessingException {
 
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
         User user1 = User.builder().idamId("123").build();
-        PartyDetails respondent1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test").build();
-        PartyDetails respondent2 = PartyDetails.builder().email("test@hmcts.net").firstName("test").build();
+        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
         caseData = CaseData.builder()
-            .respondents(Arrays.asList(element(respondent1), element(respondent2)))
+            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
+            .statementOfService(StatementOfService.builder()
+
+                                    .build())
             .build();
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
         caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
 
         caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
@@ -671,19 +725,22 @@ public class CaseServiceTest {
                       .idamId("123")
                       .solicitorRepresented(YesOrNo.Yes)
                       .build())
+            .citizenSosObject(CitizenSos.builder().build())
             .build();
         citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
             .partyDetails(partyDetails1)
-            .partyType(PartyEnum.respondent)
+            .partyType(PartyEnum.applicant)
             .build();
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
 
-
-        userDetails = UserDetails.builder().build();
-        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(authToken,"123")).thenReturn(caseDetails);
-        when(caseRepository.updateCase(authToken, "123", caseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
-
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123", "citizen-case-submit",
                                                                            citizenUpdatedCaseData
         );
@@ -732,28 +789,45 @@ public class CaseServiceTest {
 
     @Test
     public void testUpdateCaseDetailsCitizenUpdateOnDaRespondent() throws JsonProcessingException {
-        PartyDetails partyDetails = PartyDetails.builder()
-            .firstName("Test")
-            .lastName("User")
-            .user(User.builder()
-                      .email("testparty@gmail.com")
-                      .idamId("123")
-                      .solicitorRepresented(YesOrNo.Yes)
-                      .build())
-            .build();
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
+        User user1 = User.builder().idamId("123").build();
+        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
         caseData = CaseData.builder()
-            .respondentsFL401(partyDetails)
-            .caseInvites(List.of(Element.<CaseInvite>builder().value(CaseInvite.builder().isApplicant(YesOrNo.Yes)
-                                                                         .partyId(UUID.fromString("00000000-0000-0000-0000-000000000000"))
-                                                                         .accessCode("123").build()).build()))
+            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
+            .statementOfService(StatementOfService.builder()
+
+                                    .build())
             .build();
-        caseDataMap = new HashMap<>();
-        caseDetails = CaseDetails.builder()
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
+        caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
+
+        caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
             .id(123L)
             .state("SUBMITTED_PAID")
             .build();
-
         PartyDetails partyDetails1 = PartyDetails.builder()
             .firstName("Test")
             .lastName("User")
@@ -762,22 +836,22 @@ public class CaseServiceTest {
                       .idamId("123")
                       .solicitorRepresented(YesOrNo.Yes)
                       .build())
+            .citizenSosObject(CitizenSos.builder().build())
             .build();
         citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
-            .caseTypeOfApplication(FL401_CASE_TYPE)
+            .caseTypeOfApplication(C100_CASE_TYPE)
             .partyDetails(partyDetails1)
-            .partyType(PartyEnum.respondent)
+            .partyType(PartyEnum.applicant)
             .build();
-        userDetails = UserDetails.builder().build();
-        when(objectMapper.convertValue(caseDataMap,CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(Mockito.anyString(), Mockito.anyString())).thenReturn(caseDetails);
-        when(caseRepository.updateCase(any(), any(), any(), any())).thenReturn(caseDetails);
-        when(idamClient.getUserDetails(Mockito.anyString())).thenReturn(userDetails);
-        when(coreCaseDataApi.getCase(any(), any(), any())).thenReturn(caseDetails);
-        when(coreCaseDataService.startUpdate("", null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
-        when(coreCaseDataService.startUpdate(null, null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
+
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123", "citizen-case-submit",
                                                                            citizenUpdatedCaseData
         );
@@ -786,28 +860,45 @@ public class CaseServiceTest {
 
     @Test
     public void testUpdateCaseDetailsCitizenUpdateOnDaApplicant() throws JsonProcessingException {
-        PartyDetails partyDetails = PartyDetails.builder()
-            .firstName("Test")
-            .lastName("User")
-            .user(User.builder()
-                      .email("testparty@gmail.com")
-                      .idamId("123")
-                      .solicitorRepresented(YesOrNo.Yes)
-                      .build())
-            .build();
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
+        User user1 = User.builder().idamId("123").build();
+        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
         caseData = CaseData.builder()
-            .applicantsFL401(partyDetails)
-            .caseInvites(List.of(Element.<CaseInvite>builder().value(CaseInvite.builder().isApplicant(YesOrNo.Yes)
-                                                                         .partyId(UUID.fromString("00000000-0000-0000-0000-000000000000"))
-                                                                         .accessCode("123").build()).build()))
+            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
+            .statementOfService(StatementOfService.builder()
+
+                                    .build())
             .build();
-        Map<String, Object> caseDataMap = caseData.toMap(objectMapper);
-        caseDetails = CaseDetails.builder()
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
+        caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
+
+        caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
             .id(123L)
             .state("SUBMITTED_PAID")
             .build();
-
         PartyDetails partyDetails1 = PartyDetails.builder()
             .firstName("Test")
             .lastName("User")
@@ -816,22 +907,22 @@ public class CaseServiceTest {
                       .idamId("123")
                       .solicitorRepresented(YesOrNo.Yes)
                       .build())
+            .citizenSosObject(CitizenSos.builder().build())
             .build();
         citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
-            .caseTypeOfApplication(FL401_CASE_TYPE)
+            .caseTypeOfApplication(C100_CASE_TYPE)
             .partyDetails(partyDetails1)
             .partyType(PartyEnum.applicant)
             .build();
-        userDetails = UserDetails.builder().build();
-        when(objectMapper.convertValue(caseDataMap,CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(Mockito.anyString(), Mockito.anyString())).thenReturn(caseDetails);
-        when(caseRepository.updateCase(any(), any(), any(), any())).thenReturn(caseDetails);
-        when(idamClient.getUserDetails(Mockito.anyString())).thenReturn(userDetails);
-        when(coreCaseDataApi.getCase(any(), any(), any())).thenReturn(caseDetails);
-        when(coreCaseDataService.startUpdate("", null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
-        when(coreCaseDataService.startUpdate(null, null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
+
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123", "citizen-case-submit",
                                                                            citizenUpdatedCaseData
         );
@@ -869,60 +960,69 @@ public class CaseServiceTest {
 
     @Test
     public void testUpdateCaseSosWithCitizenDocs() {
-        PartyDetails partyDetails = PartyDetails.builder()
-            .firstName("Test")
-            .lastName("User")
-            .user(User.builder()
-                      .email("testparty@gmail.com")
-                      .idamId("123")
-                      .solicitorRepresented(YesOrNo.Yes)
-                      .build())
-
-            .build();
-        citizenUpdatedCaseData = citizenUpdatedCaseData.toBuilder()
-            .caseTypeOfApplication(C100_CASE_TYPE)
-            .partyDetails(PartyDetails.builder()
-                              .firstName("Test")
-                              .lastName("User")
-                              .user(User.builder()
-                                        .email("test@gmail.com")
-                                        .idamId("123")
-                                        .solicitorRepresented(YesOrNo.Yes)
-                                        .build())
-                              .citizenSosObject(CitizenSos.builder()
-                                                    .partiesServed("00000000-0000-0000-0000-000000000000,234,1234")
-                                                    .build())
-                              .build())
-            .partyType(PartyEnum.respondent)
-            .build();
-        caseData = caseData.toBuilder()
-            .citizenUploadedDocumentList(List.of(element(UploadedDocuments.builder().build())))
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
+        User user1 = User.builder().idamId("123").build();
+        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        caseData = CaseData.builder()
+            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
             .statementOfService(StatementOfService.builder()
-                                    .stmtOfServiceAddRecipient(List.of(element(StmtOfServiceAddRecipient.builder().build())))
+
                                     .build())
-            .documentManagementDetails(DocumentManagementDetails.builder()
-                                           .build())
-            .respondents(List.of(Element.<PartyDetails>builder().id(testUuid).value(partyDetails).build()))
-            .caseInvites(List.of(Element.<CaseInvite>builder().value(CaseInvite.builder().isApplicant(YesOrNo.Yes)
-                                                                         .partyId(UUID.fromString("00000000-0000-0000-0000-000000000000"))
-                                                                         .accessCode("123").build()).build()))
             .build();
-        Map<String, Object> caseDataMap = caseData.toMap(objectMapper);
-        caseDetails = CaseDetails.builder()
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
+        caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
+
+        caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
             .id(123L)
             .state("SUBMITTED_PAID")
             .build();
+        PartyDetails partyDetails1 = PartyDetails.builder()
+            .firstName("Test")
+            .lastName("User")
+            .user(User.builder()
+                      .email("test@gmail.com")
+                      .idamId("123")
+                      .solicitorRepresented(YesOrNo.Yes)
+                      .build())
+            .citizenSosObject(CitizenSos.builder().build())
+            .build();
+        citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .partyDetails(partyDetails1)
+            .partyType(PartyEnum.applicant)
+            .build();
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
 
-        when(objectMapper.convertValue(caseDataMap,CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(Mockito.anyString(), Mockito.anyString())).thenReturn(caseDetails);
-        when(caseRepository.updateCase(any(), any(), any(), any())).thenReturn(caseDetails);
-        when(idamClient.getUserDetails(Mockito.anyString())).thenReturn(userDetails);
-        when(coreCaseDataApi.getCase(any(), any(), any())).thenReturn(caseDetails);
-        when(coreCaseDataService.startUpdate("", null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
-        when(coreCaseDataService.startUpdate(null, null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123",
                                                                            CaseEvent.CITIZEN_STATEMENT_OF_SERVICE.getValue(),
                                                                            citizenUpdatedCaseData
@@ -932,62 +1032,69 @@ public class CaseServiceTest {
 
     @Test
     public void testupdateCaseSosWithCitizenSosDocs() {
-        PartyDetails partyDetails = PartyDetails.builder()
-            .firstName("Test")
-            .lastName("User")
-            .user(User.builder()
-                      .email("testparty@gmail.com")
-                      .idamId("123")
-                      .solicitorRepresented(YesOrNo.Yes)
-                      .build())
-            .build();
-        citizenUpdatedCaseData = citizenUpdatedCaseData.toBuilder()
-            .caseTypeOfApplication(C100_CASE_TYPE)
-            .partyDetails(PartyDetails.builder()
-                              .firstName("Test")
-                              .lastName("User")
-                              .user(User.builder()
-                                        .email("test@gmail.com")
-                                        .idamId("123")
-                                        .solicitorRepresented(YesOrNo.Yes)
-                                        .build())
-                              .citizenSosObject(CitizenSos.builder()
-                                                    .partiesServed("00000000-0000-0000-0000-000000000000,234,1234")
-                                                    .citizenSosDocs(List.of(TEST_UUID))
-                                                    .build())
-                              .build())
-            .partyType(PartyEnum.applicant)
-            .build();
-        caseData = caseData.toBuilder()
-            .citizenUploadedDocumentList(List.of(element(UploadedDocuments.builder().build())))
-            .documentManagementDetails(DocumentManagementDetails.builder().citizenUploadQuarantineDocsList(List.of(
-                Element.<UploadedDocuments>builder().id(UUID.fromString(TEST_UUID))
-                    .value(UploadedDocuments.builder().build()).build())).build())
+        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(coreCaseDataService.eventRequest(any(),any())).thenReturn(EventRequestData.builder().build());
+        startEventResponse = StartEventResponse.builder().eventId(eventName)
+            .caseDetails(caseDetails)
+            .token(eventToken).build();
+        when(coreCaseDataService.startUpdate(
+            Mockito.anyString(),
+            Mockito.any(),
+            Mockito.anyString(),
+            Mockito.anyBoolean()
+        )).thenReturn(
+            startEventResponse);
+        User user1 = User.builder().idamId("123").build();
+        PartyDetails applicant1 = PartyDetails.builder().user(user1).email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        PartyDetails applicant2 = PartyDetails.builder().email("test@hmcts.net").firstName("test")
+            .citizenSosObject(CitizenSos.builder().build()).build();
+        caseData = CaseData.builder()
+            .applicants(Arrays.asList(element(applicant1), element(applicant2)))
+            .documentManagementDetails(DocumentManagementDetails.builder().build())
+            .reviewDocuments(ReviewDocuments.builder()
+                                 .reviewDecisionYesOrNo(YesNoNotSure.notSure).build())
             .statementOfService(StatementOfService.builder()
-                                    .stmtOfServiceAddRecipient(List.of(element(StmtOfServiceAddRecipient.builder().build())))
+
                                     .build())
-            .applicants(List.of(Element.<PartyDetails>builder().id(testUuid).value(partyDetails).build()))
-            .caseInvites(List.of(Element.<CaseInvite>builder().value(CaseInvite.builder().isApplicant(YesOrNo.Yes)
-                                                                         .partyId(UUID.fromString(
-                                                                             "00000000-0000-0000-0000-000000000000"))
-                                                                         .accessCode("123").build()).build()))
             .build();
-        Map<String, Object> caseDataMap = caseData.toMap(objectMapper);
-        caseDetails = CaseDetails.builder()
+
+        when(CaseUtils.getCaseData(
+            startEventResponse.getCaseDetails(),
+            objectMapper
+        )).thenReturn(caseData);
+        caseDataMap = caseData.toMap(objectMapper);
+        when(caseDataMock.toMap(any())).thenReturn(new HashMap<>());
+
+        caseDetails = caseDetails.toBuilder()
             .data(caseDataMap)
             .id(123L)
             .state("SUBMITTED_PAID")
             .build();
+        PartyDetails partyDetails1 = PartyDetails.builder()
+            .firstName("Test")
+            .lastName("User")
+            .user(User.builder()
+                      .email("test@gmail.com")
+                      .idamId("123")
+                      .solicitorRepresented(YesOrNo.Yes)
+                      .build())
+            .citizenSosObject(CitizenSos.builder().build())
+            .build();
+        citizenUpdatedCaseData = CitizenUpdatedCaseData.builder()
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .partyDetails(partyDetails1)
+            .partyType(PartyEnum.applicant)
+            .build();
+        CaseDataContent caseDataContent = CaseDataContent.builder().build();
+        when(coreCaseDataService.createCaseDataContent(Mockito.any(), Mockito.any()))
+            .thenReturn(caseDataContent);
+        when(applicationsTabService.updateCitizenPartiesTab(CASE_DATA)).thenReturn(applicaionFieldsMap);
 
-        when(objectMapper.convertValue(caseDataMap,CaseData.class)).thenReturn(caseData);
-        when(caseRepository.getCase(Mockito.anyString(), Mockito.anyString())).thenReturn(caseDetails);
-        when(caseRepository.updateCase(any(), any(), any(), any())).thenReturn(caseDetails);
-        when(idamClient.getUserDetails(Mockito.anyString())).thenReturn(userDetails);
-        when(coreCaseDataApi.getCase(any(), any(), any())).thenReturn(caseDetails);
-        when(coreCaseDataService.startUpdate("", null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
-        when(coreCaseDataService.startUpdate(null, null, "", true)).thenReturn(
-            StartEventResponse.builder().caseDetails(caseDetails).build());
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseDataMock);
+        when(coreCaseDataService.submitUpdate(
+            any(),any(),any(),any(),anyBoolean())).thenReturn(
+            CaseDetails.builder().build());
         CaseDetails caseDetailsAfterUpdate = caseService.updateCaseDetails(authToken, "123",
                                                                            CaseEvent.CITIZEN_STATEMENT_OF_SERVICE.getValue(),
                                                                            citizenUpdatedCaseData
